add route locale

--- a/langs/en.json
+++ b/langs/en.json
@@ -1,18 +1,60 @@
 {
   "nav": {
-    "home": "Trang chủ",
-    "rank": "Bảng vinh danh",
-    "talent": "Tài năng được tài trợ",
-    "talent_suggestion": "Đề xuất tài năng",
-    "contribute": "Đóng góp",
-    "fund_info": "Thông tin quỹ"
+    "home": "Homepage",
+    "rank": "The Honors List",
+    "talent": "Talents that are sponsored",
+    "talent_suggestion": "Talent Suggestion",
+    "contribute": "Contribution",
+    "fund_info": "Fund Information"
   },
-  "contact": "Liên hệ",
-  "address": "Địa chỉ",
+  "about_us": "About us",
+  "partnership": "Strategic Partnership",
+  "charter": "The Charter of Fund",
+  "decision": "The decision to establish the fund",
+  "recognition": "Fund Recognition Decision",
+  "contact": "Contact",
+  "address": "Address",
   "email": "Email",
-  "phone": "Điện thoại",
-  "bank_donation": "Tài khoản quyên góp",
-  "bank": "Ngân hàng",
-  "bank_name": "Tên tài khoản",
-  "bank_branch": "Chi nhánh"
+  "phone": "Phone",
+  "bank_donation": "Donate account",
+  "bank": "Bank",
+  "bank_name": "Account name",
+  "bank_branch": "Bank branch",
+
+  "total_fund" :"Total Fund Value",
+  "sponsored" :"Sponsored Value",
+  "remain_fund" :"Remaining Value",
+  "sponsored_talent" :"Talents that are sponsored",
+  "talent_info" :"Talent Information",
+  "rank_title" :"Contributors Honoring List",
+  "member": "Member",
+  "person" :"Indiviual",
+  "organization" :"Organization",
+  "stt" :"Ranking",
+  "sdt" :"Phone No.",
+  "contribute_at" :"Contributed date",
+  "contribute_amount" :"Contribution amount",
+  "empty_data": "No data",
+  "other_talent" :"Other sponsors",
+  "detail" :"Details",
+  "suggested_talent" :"Suggested talents",
+  "submit_suggestion" :"Send your suggestion",
+  "talent_a_info" :"Talent information",
+  "talent_name" :"TALENT'S FULL NAME",
+  "phone_no" :"Phone number",
+  "birth_date" :"Date of birth",
+  "talent_field" :"Talent field",
+  "note" :"Description",
+  "submit_suggest" :"Send",
+  "vote" :"Vote",
+  "comment" :"Comment",
+  "please_enter": "Please enter ",
+  "please_enter_correct": "Please enter the correct ",
+  "send_success" :"WE HAVE RECEIVED YOUR SUGGESTION",
+  "thank_you" :"Thank you for your information. We will reach back to you in a short time.",
+  "view_talent" :"Other talents",
+  "prev_talent" :"Previous talent",
+  "next_talent" :"Next talent",
+  "talent_title": "Talent Information",
+  "talent_suggested_title": "Talent Suggestion Information"
 }
