--- a/langs/vi.json
+++ b/langs/vi.json
@@ -7,6 +7,11 @@
     "contribute": "Đóng góp",
     "fund_info": "Thông tin quỹ"
   },
+  "about_us": "Về chúng tôi",
+  "partnership": "Đối tác chiến lược",
+  "charter": "Điều lệ quỹ",
+  "decision": "Quyết định thành lập quỹ",
+  "recognition": "Quyết định công nhận quỹ",
   "contact": "Liên hệ",
   "address": "Địa chỉ",
   "email": "Email",
@@ -14,5 +19,59 @@
   "bank_donation": "Tài khoản quyên góp",
   "bank": "Ngân hàng",
   "bank_name": "Tên tài khoản",
-  "bank_branch": "Chi nhánh"
+  "bank_branch": "Chi nhánh",
+
+  "total_fund" :"Tổng giá trị quỹ",
+  "sponsored" :"Đã tài trợ",
+  "remain_fund" :"Quỹ còn lại",
+  "sponsored_talent" :"Tài năng đã nhận tài trợ",
+  "talent_info" :"Thông tin các tài năng",
+  "rank_title" :"Bảng vinh danh đóng góp",
+  "member": "Thành viên",
+  "person" :"Cá nhân",
+  "organization" :"Tổ chức",
+  "stt" :"Xếp hạng",
+  "sdt" :"SDT",
+  "contribute_at" :"Ngày đóng góp",
+  "contribute_amount" :"Số tiền đóng góp",
+  "empty_data": "Không có dữ liệu",
+  "other_talent" :"Các tài trợ khác",
+  "detail" :"Chi tiết",
+  "suggested_talent" :"Các tài năng được đề xuất",
+  "submit_suggestion" :"Gửi đề xuất tài năng của bạn",
+  "talent_a_info" :"Thông tin về tài năng",
+  "talent_name" :"TÊN CỦA TÀI NĂNG",
+  "phone_no" :"Số điện thoại",
+  "birth_date" :"Ngày sinh",
+  "talent_field" :"Lĩnh vực tài năng",
+  "note" :"Thông tin mô tả",
+  "submit_suggest" :"Gửi đề xuất",
+  "please_enter": "Vui lòng nhập ",
+  "please_enter_correct": "Vui lòng nhập đúng ",
+  "send_success" :"Gửi thành công",
+  "thank_you" :"Cảm ơn bạn đã gửi thông tin. Chúng tôi sẽ liên hệ với bạn trong thời gian sớm nhất",
+  "view_talent" :"Xem các tài năng khác",
+  "vote" :"Ủng hộ",
+  "comment" :"Thảo luận",
+  "prev_talent" :"Tài năng trước",
+  "next_talent" :"Tài năng sau",
+  "talent_title": "Thông tin tài năng",
+  "talent_suggested_title": "Thông tin tài năng được đề xuất",
+  "" :"BẠN CẦN ĐĂNG NHẬP ĐỂ GỬI THÔNG TIN CÁC TÀI NĂNG",
+  "" :"Ủng hộ tài năng",
+  "" :"Lượt ủng hộ",
+  "" :"Gửi",
+  
+  "" :"Chi tiết",
+  "" :"BẠN CẦN ĐĂNG NHẬP ĐỂ ỦNG HỘ TÀI NĂNG",
+  "" :"GỬI YÊU CẦU LIÊN HỆ",
+  "" :"Tên của bạn",
+  "" :"Lời nhắn",
+  "" :"Gửi thông tin",
+  "" :"ĐỊA CHỈ",
+  "" :"LIÊN HỆ",
+  "" :"TÀI KHOẢN KHUYÊN GÓP",
+  "" :"Tên tài khoản",
+  "" :"Ngân hàng",
+  "" :"Chi nhánh"
 }
