--- a/langs/en.json
+++ b/langs/en.json
@@ -7,13 +7,17 @@
     "contribute": "Contribution",
     "fund_info": "Fund Information"
   },
+  "require_login_cmt": "Bạn cần đăng nhập để bình luận",
+  "comment_success": "Thanks for your comment",
+  "vote_success": "Thanks for your voting",
   "about_us": "About us",
   "partnership": "Strategic Partnership",
   "charter": "The Charter of Fund",
   "decision": "The decision to establish the fund",
   "recognition": "Fund Recognition Decision",
-  "contact": "Contact",
+  "contact": "Contact us",
   "address": "Address",
+  "our_address": "OUR ADDRESS",
   "email": "Email",
   "phone": "Phone",
   "bank_donation": "Donate account",
@@ -56,5 +60,15 @@
   "prev_talent" :"Previous talent",
   "next_talent" :"Next talent",
   "talent_title": "Talent Information",
-  "talent_suggested_title": "Talent Suggestion Information"
+  "talent_suggested_title": "Talent Suggestion Information",
+  "require_login_suggestion": "YOU NEED TO SIGN IN BEFORE CONTINUING",
+  "require_login_vote" :"YOU NEED TO SIGN IN BEFORE CONTINUING",
+  "vote_talent" :"Talent voting",
+  "num_vote" :"Number of votes",
+  "send" :"Send",
+  "fill_comment": "Comment...",
+  "message": "Message",
+  "send_info" :"Send",
+  "your_name": "FULL NAME",
+  "send_contact": "SEND A REQUEST"
 }
