--- a/langs/vi.json
+++ b/langs/vi.json
@@ -7,6 +7,9 @@
     "contribute": "Đóng góp",
     "fund_info": "Thông tin quỹ"
   },
+  "require_login_cmt": "You need to sign in to comment",
+  "comment_success": "Cảm ơn bạn đã để lại bình luận",
+  "vote_success": "Cảm ơn bạn đã ủng hộ tài năng",
   "about_us": "Về chúng tôi",
   "partnership": "Đối tác chiến lược",
   "charter": "Điều lệ quỹ",
@@ -14,6 +17,7 @@
   "recognition": "Quyết định công nhận quỹ",
   "contact": "Liên hệ",
   "address": "Địa chỉ",
+  "our_address": "Địa chỉ",
   "email": "Email",
   "phone": "Điện thoại",
   "bank_donation": "Tài khoản quyên góp",
@@ -57,21 +61,14 @@
   "next_talent" :"Tài năng sau",
   "talent_title": "Thông tin tài năng",
   "talent_suggested_title": "Thông tin tài năng được đề xuất",
-  "" :"BẠN CẦN ĐĂNG NHẬP ĐỂ GỬI THÔNG TIN CÁC TÀI NĂNG",
-  "" :"Ủng hộ tài năng",
-  "" :"Lượt ủng hộ",
-  "" :"Gửi",
-  
-  "" :"Chi tiết",
-  "" :"BẠN CẦN ĐĂNG NHẬP ĐỂ ỦNG HỘ TÀI NĂNG",
-  "" :"GỬI YÊU CẦU LIÊN HỆ",
-  "" :"Tên của bạn",
-  "" :"Lời nhắn",
-  "" :"Gửi thông tin",
-  "" :"ĐỊA CHỈ",
-  "" :"LIÊN HỆ",
-  "" :"TÀI KHOẢN KHUYÊN GÓP",
-  "" :"Tên tài khoản",
-  "" :"Ngân hàng",
-  "" :"Chi nhánh"
+  "require_login_suggestion": "Bạn cần đăng nhập<br/>để gửi thông tin các tài năng",
+  "require_login_vote" :"Bạn cần đăng nhập để ủng hộ tài năng",
+  "vote_talent" :"Ủng hộ tài năng",
+  "num_vote" :"Lượt ủng hộ",
+  "send" :"Gửi",
+  "fill_comment": "Bình luận...",
+  "message" :"Lời nhắn",
+  "send_info" :"Gửi thông tin",
+  "your_name": "TÊN CỦA BẠN",
+  "send_contact": "Gửi yêu cầu liên hệ"
 }
