--- a/langs/vi.json
+++ b/langs/vi.json
@@ -7,7 +7,7 @@
     "contribute": "Đóng góp",
     "fund_info": "Thông tin quỹ"
   },
-  "require_login_cmt": "You need to sign in to comment",
+  "require_login_cmt": "Bạn cần đăng nhập để bình luận",
   "comment_success": "Cảm ơn bạn đã để lại bình luận",
   "vote_success": "Cảm ơn bạn đã ủng hộ tài năng",
   "about_us": "Về chúng tôi",
