--- a/langs/en.json
+++ b/langs/en.json
@@ -2,25 +2,25 @@
   "nav": {
     "home": "Homepage",
     "rank": "The Honors List",
-    "talent": "Talents that are sponsored",
+    "talent": "Sponsored Talents",
     "talent_suggestion": "Talent Suggestion",
-    "contribute": "Contribution",
+    "contribute": "Donate",
     "fund_info": "Fund Information"
   },
   "require_login_cmt": "You need to sign in before continuing",
   "comment_success": "Thanks for your comment",
   "vote_success": "Thanks for your voting",
-  "about_us": "About us",
+  "about_us": "About Us",
   "partnership": "Strategic Partnership",
   "charter": "The Charter of Fund",
-  "decision": "The decision to establish the fund",
+  "decision": "Fund Establishment Decision",
   "recognition": "Fund Recognition Decision",
   "contact": "Contact us",
   "address": "Address",
   "our_address": "OUR ADDRESS",
   "email": "Email",
   "phone": "Phone",
-  "bank_donation": "Donate account",
+  "bank_donation": "Donation bank details",
   "bank": "Bank",
   "bank_name": "Account name",
   "bank_branch": "Bank branch",
@@ -28,58 +28,58 @@
   "total_fund" :"Total Fund Value",
   "sponsored" :"Sponsored Value",
   "remain_fund" :"Remaining Value",
-  "sponsored_talent" :"Talents that are sponsored",
+  "sponsored_talent" :"Sponsored Talents",
   "talent_info" :"Talent Information",
   "rank_title" :"Contributors Honoring List",
   "member": "Member",
-  "person" :"Indiviual",
+  "person" :"Individual",
   "organization" :"Organization",
   "stt" :"Ranking",
   "sdt" :"Phone No.",
-  "contribute_at" :"Contributed date",
-  "contribute_amount" :"Contribution amount",
+  "contribute_at" :"Date of Donation",
+  "contribute_amount" :"Donation Amount",
   "empty_data": "No data",
-  "other_talent" :"Other sponsors",
+  "other_talent" :"Other sponsorships",
   "detail" :"Details",
   "suggested_talent" :"Suggested talents",
-  "submit_suggestion" :"Send your suggestion",
-  "talent_a_info" :"Talent information",
+  "submit_suggestion" :"Suggest a talent",
+  "talent_a_info" :"Suggestion form",
   "talent_name" :"TALENT'S FULL NAME",
   "phone_no" :"Phone number",
   "birth_date" :"Date of birth",
   "talent_field" :"Talent field",
   "note" :"Description",
-  "submit_suggest" :"Send",
+  "submit_suggest" :"Submit",
   "vote" :"Vote",
   "comment" :"Comment",
   "please_enter": "Please enter ",
   "please_enter_correct": "Please enter the correct ",
   "send_success" :"WE HAVE RECEIVED YOUR SUGGESTION",
   "thank_you" :"Thank you for your information. We will reach back to you in a short time.",
-  "view_talent" :"Other talents",
+  "view_talent" :"View other talents",
   "prev_talent" :"Previous talent",
   "next_talent" :"Next talent",
   "talent_title": "Talent Information",
   "talent_suggested_title": "Talent Suggestion Information",
-  "require_login_suggestion": "YOU NEED TO SIGN IN BEFORE CONTINUING",
-  "require_login_vote" :"YOU NEED TO SIGN IN BEFORE CONTINUING",
-  "vote_talent" :"Talent voting",
+  "require_login_suggestion": "PLEASE SIGN IN BEFORE CONTINUING",
+  "require_login_vote" :"PLEASE SIGN IN BEFORE CONTINUING",
+  "vote_talent" :"Vote",
   "num_vote" :"Number of votes",
   "send" :"Send",
   "fill_comment": "Comment...",
   "message": "Message",
   "send_info" :"Submit",
   "your_name": "FULL NAME",
-  "send_contact": "SEND A REQUEST",
-  "payment_success": "Payment success",
+  "send_contact": "CONTACT FORM",
+  "payment_success": "Payment successful",
   "payment_failed": "Payment failed",
   "try_contribute": "Try again",
-  "contribute_form": "Contribution form",
-  "contribute_type": "Contribution type",
-  "send_contribute": "Submit a donation",
+  "contribute_form": "Form of donation",
+  "contribute_type": "Type of donation",
+  "send_contribute": "Submit",
   "cod": "Bank transfer/ Donation at the counter",
   "contribute_name": "PERSONAL NAME / ORGANIZATION",
-  "contribute_title": "CONTRIBUTING TO VIETNAM TALENT DEVELOPMENT FUND",
+  "contribute_title": "DONATE TO VIETNAM TALENT DEVELOPMENT FUND",
   "contribute_success": "Thank you for your donation to Viet Talent Development Fund.<br /> Through this donation, you have given the Viet Talents more opportunities to shine in the future.",
   "contribute_fail": "Sorry, your transaction has not been successful.<br />Please double check the operation and try again",
   "suggest_content": "As a Vietnamese citizen, surely no one will forget the emotional moment when Van Thanh scored the decisive goal to bring the ‘Vietnam national under-23 football team’ to the final of ‘2018 AFC U-23 Championship’ in Changzhou, or the moment when Anh Vien cried while singing the national anthem after receiving 8 SEAGAME 2017 Gold Medals, which was a miracle bringing boundless pride to our country.<br><br>However, not many people know that before gaining such great accomplishments, these talents have gone through difficult and deadlocked periods to an extent that they almost gave up… but fortunately, they were able to overcome these difficulties by receiving timely encouragement and support from people around them and therefore, bringing extreme joy to our country and lighting up the national pride inside millions of Vietnamese people.<br><br>Vietnam Talent Development Fund was founded in order to give all of us the opportunity to be a part of victory bringing pride to our nation in an effortless way: by buying just one cup of Ong Bau café, you have contributed 1,000 VND to the Fund, or by donating directly in cash, artifacts, … to your chosen talents on the Fund’s website.<br><br>Your small action will help developing more talents and bringing pride to our country. Millions of people have contributed to the Vietnam Talent Development Fund… how about you?"
