--- a/langs/vi.json
+++ b/langs/vi.json
@@ -1,4 +1,9 @@
 {
+  "page_title": "Quỹ Phát Triển Tài Năng Việt",
+  "prev": "Trang trước",
+  "next": "Trang sau",
+  "sponsor_info": "Thông tin tài trợ",
+  "store": "Cửa hàng",
   "nav": {
     "home": "Trang chủ",
     "rank": "Bảng vinh danh",
