--- a/langs/en.json
+++ b/langs/en.json
@@ -2,7 +2,7 @@
   "list_sponsored": "Talent sponsorship list",
   "talent_name_sponsored": "Talent Name",
   "sponsored_amount": "Sponsorship Amount",
-  "page_title": "Vietnam Talent Development Fund",
+  "page_title": "Viet Talent Development Fund",
   "prev": "Previous",
   "next": "Next",
   "sponsor_info": "Sponsorship information",
@@ -44,7 +44,7 @@
   "stt" :"Ranking",
   "sdt" :"Phone No.",
   "contribute_at" :"Date of Donation",
-  "contribute_amount" :"Donation Amount",
+  "contribute_amount" :"Donation amount",
   "empty_data": "No data",
   "other_talent" :"Other sponsorships",
   "detail" :"Details",
@@ -90,5 +90,5 @@
   "contribute_title": "DONATE TO VIETNAM TALENT DEVELOPMENT FUND",
   "contribute_success": "Thank you for your donation to Viet Talent Development Fund.<br /> Through this donation, you have given the Viet Talents more opportunities to shine in the future.",
   "contribute_fail": "Sorry, your transaction has not been successful.<br />Please double check the operation and try again",
-  "suggest_content": "As a Vietnamese citizen, surely no one will forget the emotional moment when Van Thanh scored the decisive goal to bring the ‘Vietnam national under-23 football team’ to the final of ‘2018 AFC U-23 Championship’ in Changzhou, or the moment when Anh Vien cried while singing the national anthem after receiving 8 SEAGAME 2017 Gold Medals, which was a miracle bringing boundless pride to our country.<br><br>However, not many people know that before gaining such great accomplishments, these talents have gone through difficult and deadlocked periods to an extent that they almost gave up… but fortunately, they were able to overcome these difficulties by receiving timely encouragement and support from people around them and therefore, bringing extreme joy to our country and lighting up the national pride inside millions of Vietnamese people.<br><br>Vietnam Talent Development Fund was founded in order to give all of us the opportunity to be a part of victory bringing pride to our nation in an effortless way: by buying just one cup of Ong Bau café, you have contributed 1,000 VND to the Fund, or by donating directly in cash, artifacts, … to your chosen talents on the Fund’s website.<br><br>Your small action will help developing more talents and bringing pride to our country. Millions of people have contributed to the Vietnam Talent Development Fund… how about you?"
+  "suggest_content": "As a Vietnamese citizen, surely no one will forget the emotional moment when Van Thanh scored the decisive goal to bring the ‘Vietnam national U-23 football team’ to the final of ‘2018 AFC U-23 Championship’ in Changzhou or the moment when Anh Vien cried while singing the national anthem after receiving 8 SEA Games 2017 Gold Medals, which was a miracle bringing boundless pride to our country.<br><br>However, not many people know that before gaining such great accomplishments, these talents have gone through difficult and deadlocked periods to an extent that they almost gave up… but fortunately, they were able to overcome these difficulties by receiving timely encouragement and support from people around them and therefore, bringing extreme joy to our country and lighting up the national pride inside millions of Vietnamese people.<br><br>Viet Talent Development Fund was founded to give us an opportunity to be a part of victory bringing pride to our nation in an effortless way: by buying just one cup of Ong Bau café, you have contributed 1,000 VND to the Fund, or by donating directly in cash, artifacts,… to your chosen talents on the Fund’s website.<br><br>Your small action will help develop more talents and bring pride to our country. Millions of people have contributed to the Viet Talent Development Fund… how about you?"
 }
